Fixed console preview overflowing on black box tests.

--- a/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
+++ b/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
@@ -132,6 +132,13 @@ p.compact {
 	line-height: normal;
 }
 
+div.consolePreview {
+	font-family: monospace;
+	white-space: pre-wrap;
+	overflow: scroll;
+	width: 400px;
+}
+
 span.help {
 	background-image: url("../images/help_small.png");
 	cursor: pointer;
